Githubsalesforcebackup/force-app/main/default/objects/Candidate_Information__c/Candidate_Information__c.object-meta.xml
<CustomObject>
    <label>Candidate Information</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Candidate  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Candidate Informations</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>