Githubsalesforcebackup/force-app/main/default/objects/Candidate_Information__c/fields/Basic__c.field-meta.xml
<CustomField>
    <fullName>Basic__c</fullName>
    <formula>(Total_CTC__c*50)/100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Basic</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>