Githubsalesforcebackup/force-app/main/default/objects/Candidate_Information__c/fields/Calculate_Max_Appraisal__c.field-meta.xml
<CustomField>
    <fullName>Calculate_Max_Appraisal__c</fullName>
    <label>Calculate Max Appraisal</label>
    <summarizedField>Appraisal_Letter__c.Appraisal_To__c</summarizedField>
    <summaryForeignKey>Appraisal_Letter__c.Candidate_Name__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>