Githubsalesforcebackup/force-app/main/default/objects/Candidate_Information__c/fields/Calculate_year_and_month__c.field-meta.xml
<CustomField>
    <fullName>Calculate_year_and_month__c</fullName>
    <formula>IF(Today()&lt;Date_Of_Joining__c , &quot;Check the Date!&quot;,

TEXT(IF(YEAR(Today())=YEAR(Date_Of_Joining__c ),0,IF(YEAR(Today())-YEAR(Date_Of_Joining__c )=1,IF(MONTH(Today())=MONTH(Date_Of_Joining__c ),IF(DAY(Today())&lt;DAY(Date_Of_Joining__c ),0,1),IF(MONTH(Today())&lt;MONTH(Date_Of_Joining__c ),IF(DAY(Today())&lt;DAY(Date_Of_Joining__c ),1,0),1)),IF(MONTH(Today())-MONTH(Date_Of_Joining__c )&lt;0,YEAR(Today())-YEAR(Date_Of_Joining__c )-1,IF(MONTH(Today())=MONTH(Date_Of_Joining__c ),IF(DAY(Today())&lt;DAY(Date_Of_Joining__c ),YEAR(Today())-YEAR(Date_Of_Joining__c )-1,YEAR(Today())-YEAR(Date_Of_Joining__c )),YEAR(Today())-YEAR(Date_Of_Joining__c )))))) &amp; &quot; year(s), &quot; &amp;

TEXT(IF(YEAR(Today())=YEAR(Date_Of_Joining__c ),IF(MONTH(Today())=MONTH(Date_Of_Joining__c ),0,IF(MONTH(Today())&gt;MONTH(Date_Of_Joining__c ),IF(DAY(Today())&lt;DAY(Date_Of_Joining__c ),MONTH(Today())-MONTH(Date_Of_Joining__c )-1,MONTH(Today())-MONTH(Date_Of_Joining__c )),0)),IF(MONTH(Today())=MONTH(Date_Of_Joining__c ),IF(DAY(Today())&lt;DAY(Date_Of_Joining__c ),11,0),IF(MONTH(Today())&gt;MONTH(Date_Of_Joining__c ),IF(DAY(Today())&lt;DAY(Date_Of_Joining__c ),MONTH(Today())-MONTH(Date_Of_Joining__c )-1,MONTH(Today())-MONTH(Date_Of_Joining__c )),IF(MONTH(Today())&lt;MONTH(Date_Of_Joining__c ),IF(DAY(Today())&lt;DAY(Date_Of_Joining__c ),11-(MONTH(Date_Of_Joining__c )-MONTH(Today())),12-(MONTH(Date_Of_Joining__c )-MONTH(Today()))),12-(MONTH(Date_Of_Joining__c )-MONTH(Today()))))))) &amp; &quot; month(s)&quot;

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calculate year and month</label>
    <type>Text</type>
</CustomField>