Githubsalesforcebackup/force-app/main/default/objects/Candidate_Information__c/fields/Candidate_Position__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Position__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Candidate Position</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>