Githubsalesforcebackup/force-app/main/default/objects/Candidate_Information__c/fields/City_and_state__c.field-meta.xml
<CustomField>
    <fullName>City_and_state__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>City and state</label>
    <length>30</length>
    <type>Text</type>
</CustomField>