Githubsalesforcebackup/force-app/main/default/objects/Candidate_Information__c/fields/Company_Address__c.field-meta.xml
<CustomField>
    <fullName>Company_Address__c</fullName>
    <defaultValue>&apos;D-192,Industrial area, gurudwara,Pundri,Kaithal (Haryana),Mobile : +91-9017175119 Email : info@websfdctech.co.in, Web: https://websfdctech.co.in&apos;</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <label>Company Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>