Githubsalesforcebackup/force-app/main/default/objects/Candidate_Information__c/fields/Company_Addressa__c.field-meta.xml
<CustomField>
    <fullName>Company_Addressa__c</fullName>
    <formula>IF(Total_CTC__c &lt; 1000, TEXT(Total_CTC__c),
  IF(Total_CTC__c &lt; 1000000, TEXT(FLOOR(Total_CTC__c/1000)) &amp; &apos;,&apos; &amp; RIGHT(TEXT(Total_CTC__c), 3),
    IF(Total_CTC__c &lt; 1000000000, TEXT(FLOOR(Total_CTC__c/1000000)) &amp; &apos;,&apos; &amp; TEXT(FLOOR(MOD(Total_CTC__c,1000000)/1000)) &amp; &apos;,&apos; &amp; RIGHT(TEXT(Total_CTC__c), 3), &quot;Error:Number Greater Than 999,999,999&quot;)
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Company Address</label>
    <type>Text</type>
</CustomField>