Githubsalesforcebackup/force-app/main/default/objects/Candidate_Information__c/fields/Date_Of_Joining__c.field-meta.xml
<CustomField>
    <fullName>Date_Of_Joining__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Of Joining</label>
    <required>true</required>
    <type>Date</type>
</CustomField>