Githubsalesforcebackup/force-app/main/default/objects/Candidate_Information__c/fields/Day_in_text_Offer_Release_Date__c.field-meta.xml
<CustomField>
    <fullName>Day_in_text_Offer_Release_Date__c</fullName>
    <formula>CASE(
MOD( Offer_Release_Date__c - DATE( 1900, 1, 8 ), 7 ),
0, &quot;Monday&quot;,
1, &quot;Tuesday&quot;,
2, &quot;Wednesday&quot;,
3, &quot;Thursday&quot;,
4, &quot;Friday&quot;,
5, &quot;Saturday&quot;,
&quot;Sunday&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Day in text (Offer Release Date)</label>
    <type>Text</type>
</CustomField>