Githubsalesforcebackup/force-app/main/default/objects/Candidate_Information__c/fields/Employee_Id__c.field-meta.xml
<CustomField>
    <fullName>Employee_Id__c</fullName>
    <displayFormat>WS{0000}</displayFormat>
    <label>Employee Id</label>
    <type>AutoNumber</type>
</CustomField>