Githubsalesforcebackup/force-app/main/default/objects/Candidate_Information__c/fields/Financial_Year__c.field-meta.xml
<CustomField>
    <fullName>Financial_Year__c</fullName>
    <formula>TEXT(YEAR( Date_Of_Joining__c ))+&apos; - &apos;+TEXT(YEAR( Date_Of_Joining__c )+1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Financial Year</label>
    <type>Text</type>
</CustomField>