Githubsalesforcebackup/force-app/main/default/objects/Candidate_Information__c/fields/Food_All__c.field-meta.xml
<CustomField>
    <fullName>Food_All__c</fullName>
    <formula>(Total_CTC__c*3)/102</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Food All</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>