Githubsalesforcebackup/force-app/main/default/objects/Candidate_Information__c/fields/Gratuity__c.field-meta.xml
<CustomField>
    <fullName>Gratuity__c</fullName>
    <formula>(Total_CTC__c*4.81)/100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gratuity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>