Githubsalesforcebackup/force-app/main/default/objects/Candidate_Information__c/fields/H_R_A__c.field-meta.xml
<CustomField>
    <fullName>H_R_A__c</fullName>
    <formula>(Total_CTC__c*25)/100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>H R A</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>