Githubsalesforcebackup/force-app/main/default/objects/Candidate_Information__c/fields/HR_Name__c.field-meta.xml
<CustomField>
    <fullName>HR_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>HR Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>