Githubsalesforcebackup/force-app/main/default/objects/Candidate_Information__c/fields/Joining_Date__c.field-meta.xml
<CustomField>
    <fullName>Joining_Date__c</fullName>
    <formula>CASE(MOD(TODAY() - (Years_of_Experience__c * 365) - DATE(1985,6,24),7),
    0, TODAY() - (Years_of_Experience__c * 365),  
    1, TODAY() - (Years_of_Experience__c * 365),   
    2, TODAY() - (Years_of_Experience__c * 365),  
    3, TODAY() - (Years_of_Experience__c * 365),   
    4, NULL,                                      
    5, NULL,                                     
    NULL                                      
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Joining Date</label>
    <type>Date</type>
</CustomField>