Githubsalesforcebackup/force-app/main/default/objects/Candidate_Information__c/fields/Landmark_place__c.field-meta.xml
<CustomField>
    <fullName>Landmark_place__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Landmark place</label>
    <length>255</length>
    <type>Text</type>
</CustomField>