Githubsalesforcebackup/force-app/main/default/objects/Candidate_Information__c/fields/LIC_Insurance__c.field-meta.xml
<CustomField>
    <fullName>LIC_Insurance__c</fullName>
    <formula>(Total_CTC__c*0.17)/100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LIC Insurance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>