Githubsalesforcebackup/force-app/main/default/objects/Candidate_Information__c/fields/Medical_Allowance__c.field-meta.xml
<CustomField>
    <fullName>Medical_Allowance__c</fullName>
    <formula>(Total_CTC__c*0.89)/100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Medical Allowance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>