Githubsalesforcebackup/force-app/main/default/objects/Candidate_Information__c/fields/Medical_Insurance__c.field-meta.xml
<CustomField>
    <fullName>Medical_Insurance__c</fullName>
    <formula>(Total_CTC__c*0.807)/100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Medical Insurance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>