Githubsalesforcebackup/force-app/main/default/objects/Candidate_Information__c/fields/Mobile_Allowance__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Allowance__c</fullName>
    <formula>(Total_CTC__c*4)/102</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mobile Allowance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>