Githubsalesforcebackup/force-app/main/default/objects/Candidate_Information__c/fields/Offer_Acceptance_Date__c.field-meta.xml
<CustomField>
    <fullName>Offer_Acceptance_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Offer Acceptance  Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>