Githubsalesforcebackup/force-app/main/default/objects/Candidate_Information__c/fields/Performance_Bonus__c.field-meta.xml
<CustomField>
    <fullName>Performance_Bonus__c</fullName>
    <formula>(Total_CTC__c*4.771)/100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Performance Bonus</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>