Githubsalesforcebackup/force-app/main/default/objects/Candidate_Information__c/fields/Relation__c.field-meta.xml
<CustomField>
    <fullName>Relation__c</fullName>
    <formula>IF( ISPICKVAL(Gender__c, &apos;male&apos;) , &apos;S/o&apos;, &apos;D/o&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Relation</label>
    <type>Text</type>
</CustomField>