Githubsalesforcebackup/force-app/main/default/objects/Candidate_Information__c/fields/Salutation__c.field-meta.xml
<CustomField>
    <fullName>Salutation__c</fullName>
    <formula>IF( ISPICKVAL(Gender__c, &apos;male&apos;)  , &apos;Mr&apos;, &apos;Mrs&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Salutation</label>
    <type>Text</type>
</CustomField>