Githubsalesforcebackup/force-app/main/default/objects/Candidate_Information__c/fields/Total_CTC__c.field-meta.xml
<CustomField>
    <fullName>Total_CTC__c</fullName>
    <label>Total CTC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>