Githubsalesforcebackup/force-app/main/default/objects/Candidate_Information__c/fields/Total_Salary_slips__c.field-meta.xml
<CustomField>
    <fullName>Total_Salary_slips__c</fullName>
    <label>Total Salary slips</label>
    <summaryForeignKey>Salary_Slip__c.Candidate_Name__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>