Githubsalesforcebackup/force-app/main/default/objects/Candidate_Information__c/fields/Training_Certification__c.field-meta.xml
<CustomField>
    <fullName>Training_Certification__c</fullName>
    <formula>(Total_CTC__c*1.6)/100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Training &amp; Certification</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>