Githubsalesforcebackup/force-app/main/default/objects/Candidate_Information__c/fields/Transport_Allowance__c.field-meta.xml
<CustomField>
    <fullName>Transport_Allowance__c</fullName>
    <formula>(Total_CTC__c*3.2)/107</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Transport Allowance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>