Githubsalesforcebackup/force-app/main/default/objects/Candidate_Information__c/fields/Travel_Allowance__c.field-meta.xml
<CustomField>
    <fullName>Travel_Allowance__c</fullName>
    <formula>(Total_CTC__c*8.812)/100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Travel Allowance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>