Githubsalesforcebackup/force-app/main/default/objects/Candidate_Information__c/fields/Uniform_All__c.field-meta.xml
<CustomField>
    <fullName>Uniform_All__c</fullName>
    <formula>(Total_CTC__c*0.14)/100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Uniform All</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>