Githubsalesforcebackup/force-app/main/default/objects/Candidate_Information__c/fields/Years_of_Experience__c.field-meta.xml
<CustomField>
    <fullName>Years_of_Experience__c</fullName>
    <label>Years of Experience</label>
    <precision>8</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>