Githubsalesforcebackup/force-app/main/default/objects/Candidate_Information__c/validationRules/Acceptance_is_less_than_joining.validationRule-meta.xml
<ValidationRule>
    <fullName>Acceptance_is_less_than_joining</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Offer_Release_Date__c)),
    NOT(ISBLANK(Offer_Acceptance_Date__c)),
    NOT(ISBLANK(Joining_Date__c)),
    OR(
        Offer_Release_Date__c &gt; Offer_Acceptance_Date__c,
        Offer_Acceptance_Date__c &gt; Joining_Date__c
    )
)</errorConditionFormula>
    <errorMessage>Acceptance is less than joining</errorMessage>
</ValidationRule>