Githubsalesforcebackup/force-app/main/default/objects/Candidate_Information__c/validationRules/Date_should_not_fall_in_weekends.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_should_not_fall_in_weekends</fullName>
    <active>true</active>
    <errorConditionFormula>OR(OR(MOD(Offer_Release_Date__c - DATE( 1900, 1, 7 ), 7 ) == 0, MOD(Offer_Release_Date__c - DATE( 1900, 1, 7 ), 7 ) == 6),OR(MOD(Offer_Acceptance_Date__c - DATE( 1900, 1, 7 ), 7 ) == 0, MOD(Offer_Acceptance_Date__c - DATE( 1900, 1, 7 ), 7 ) == 6),OR(MOD(Date_Of_Joining__c - DATE( 1900, 1, 7 ), 7 ) == 0, MOD(Date_Of_Joining__c - DATE( 1900, 1, 7 ), 7 ) == 6))</errorConditionFormula>
    <errorMessage>Date should not fall in weekend</errorMessage>
</ValidationRule>