Githubsalesforcebackup/force-app/main/default/objects/Candidate_Information__c/validationRules/Offeracc_Date_earlier_than_Join_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Offeracc_Date_earlier_than_Join_Date</fullName>
    <active>false</active>
    <description>Offer acceptance date should be earlier than joining date.</description>
    <errorConditionFormula>Offer_Acceptance_Date__c  &lt;  Joining_Date__c</errorConditionFormula>
    <errorDisplayField>Offer_Acceptance_Date__c</errorDisplayField>
    <errorMessage>Offer acceptance date should be earlier than Joining date.</errorMessage>
</ValidationRule>