Githubsalesforcebackup/force-app/main/default/objects/Candidate_Information__c/validationRules/OfferRel_Date_Earlier_than_Accep_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>OfferRel_Date_Earlier_than_Accep_Date</fullName>
    <active>false</active>
    <description>Offer Release date should be earlier than accep date.</description>
    <errorConditionFormula>Offer_Release_Date__c  &gt;  Offer_Acceptance_Date__c</errorConditionFormula>
    <errorDisplayField>Offer_Release_Date__c</errorDisplayField>
    <errorMessage>Offer release date should be earlier than accep date.</errorMessage>
</ValidationRule>