Githubsalesforcebackup/force-app/main/default/objects/Candidate_Information__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>Basic__c</columns>
    <columns>Candidate_Position__c</columns>
    <columns>City_and_state__c</columns>
    <columns>Company_Address__c</columns>
    <columns>Company_Addressa__c</columns>
    <columns>Date_Of_Joining__c</columns>
    <columns>Employee_Id__c</columns>
    <columns>Father_Name__c</columns>
    <columns>Financial_Year__c</columns>
    <columns>Offer_Acceptance_Date__c</columns>
    <columns>Offer_Release_Date__c</columns>
    <columns>Total_CTC__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>